--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -174,7 +174,7 @@ blockquote {
                (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
         </div>
-        <h3>Trending in <%= link_to(@post.category.name, @post.category) %></h3>
+        <h3>Trending in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
         <div class="contain_articles">
           <% @trending.each do |post| %>
             <div class="ctgry_article">
