only admins/authors can edit published articles

--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -21,6 +21,10 @@ $gray:  #2a2a2a;
   color: #545454;
 }
 
+.title {
+  font-family: "Playfair Display";
+}
+
 .trending_title{
   font-family: 'Playfair Display';
   font-size: 1.1em;
