outreaches created; bug fixed

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -74,8 +74,10 @@
     <% end %>
 
     <% if current_user && current_user.admin? %>
-    <%= f.label "Admin" %>
-    <%= f.check_box :admin %><br />
+      <%= f.label "Admin" %>
+      <%= f.check_box :admin %><br />
+      <%= f.label "Marketer" %>
+      <%= f.check_box :marketer %><br />
     <% end %>
     <br>
   <% end %>
