--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -26,6 +26,7 @@ blockquote {
           <div class="post_info">
             <div class="left_side_flex">
               <div class="authors">
+                <% @byauthor = @collab.present? ? "" : "By " %>
                 <div class="one_author">
                   <% if @post.user.profile.exists? %>
                     <%= image_tag(@post.user.profile.url(:square), :class => "profile_img") %>
@@ -33,17 +34,17 @@ blockquote {
                     <%= image_tag("profile_image", :class => "profile_img") %>
                   <% end %>
                   <p class="author" style="margin-right: 10px;">
-                      By <%= link_to(@post.user.full_name, @user) %>
+                      <%= @byauthor %><%= link_to(@post.user.full_name, @user) %>
                 </div>
                 <div class="one_author second_author">
-                  <% if @collab != nil %>
+                  <% if @collab.present? %>
                       <% if @collab.profile.exists? %>
                         <%= image_tag(@collab.profile.url(:square), :class => "profile_img") %>
                       <% else %>
                         <%= image_tag("profile_image", :class => "profile_img") %>
                       <% end %>
                       <p class="author" style="margin-right: 10px;">
-                        By <%= link_to(@collab.full_name, @collab) %></p>
+                        <%= link_to(@collab.full_name, @collab) %></p>
                   <% end %>
                 </div>
               </div>
