--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -24,7 +24,7 @@ pintrk('track', 'pagevisit');
 <p><i>“I was limited to creating articles for my school's publication that sadly didn't get the success and recognition it actually deserved, pitching articles to websites without getting any response, and blogging regularly with no traffic. I really needed a place that can help publicize my work to a larger audience and help me improve and give me the constructive criticism I needed to achieve said improvement, and The Teen Magazine has provided all of that for me.”</i></p>
 <p><i>"When I became a writer for The Teen Magazine, I was just hoping for a simple activity. However, over the course of my experience here, it has become way more than that. To be able to have a role in the Entertainment industry and write articles that appear first on Google is amazing. I've gotten to meet and collaborate with young women all over the world and learn about their experiences and opinions. I would never change my experience at The Teen Magazine."</i></p>
 
-<p>We hope you apply to our team, and we can’t wait to read your submission!</p>
+<h4>We hope you apply to our team, and we can’t wait to read your submission!</h4>
 
   <%= form_for @application do |f| %>
     <span>First Name</span>
