--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -57,9 +57,8 @@
   <p>You can change your password  <a target="_blank" href="/users/edit">here</a>.</p>
 
   <p class="question">I have someone I want to interview. How do I reach out to them, and ask for an interview?</p>
-  <p>Right now, there's no formal process. All the interviews we've done have been through influencers' managers reaching out to us, but often if you can find their email (usually found through social media accounts)
-    or contact form on their website, they're very receptive to scheduling an interview. Make sure to include that you're a writer for The Teen Magazine and your reason for wanting to interview them for an article. Often you
-    can ask the influencer to share your article once it has been published.</p>
+  <p>Our interview team conducts all interviews on The Teen Magazine. Please apply to our interview team through our Google form <a href="https://docs.google.com/forms/d/e/1FAIpQLScDJe80_E686pG1L7R5w-84HHZcotFmuBSyQV5rqUB2jUQTag/viewform">here</a>.
+    Please note that applications are accepted at the end of every month and writers who are not active in the interview group are removed for the following month.</p>
 
   <p class="question">Have a question that wasn't answered here?</p>
   <p>Email us at editors@theteenmagazine.com or message one of the editors in the <a href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
