small change to paths and google form link

--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -57,7 +57,7 @@
   <p>You can change your password  <a target="_blank" href="/users/edit">here</a>.</p>
 
   <p class="question">I have someone I want to interview. How do I reach out to them, and ask for an interview?</p>
-  <p>Our interview team conducts all interviews on The Teen Magazine. Please apply to our interview team through our Google form <a href="https://docs.google.com/forms/d/e/1FAIpQLScDJe80_E686pG1L7R5w-84HHZcotFmuBSyQV5rqUB2jUQTag/viewform">here</a>.
+  <p>Our interview team conducts all interviews on The Teen Magazine. Please apply to our interview team through our <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScDJe80_E686pG1L7R5w-84HHZcotFmuBSyQV5rqUB2jUQTag/viewform">Google form</a>.
     Please note that applications are accepted at the end of every month and writers who are not active in the interview group are removed for the following month.</p>
 
   <p class="question">Have a question that wasn't answered here?</p>
