added monthly issue email

--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -36,7 +36,7 @@
     assignments your <%= link_to "edit profile page", edit_user_path(current_user) %>. There is no limit to how many articles you can submit per month, and we would love for you to write as many articles as you have time for.</p>
 
   <p class="question">How do I include images? </p>
-  <p>Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a></p>
+  <p>Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a>.</p>
 
   <p class="question">What should I write about? </p>
   <p>Please Visit <a href="/choosing-a-topic">Choosing A Topic</a> or claim a pitch from <%= link_to("Editor Pitches", pitches_path) %>.</p>
