--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,11 +34,11 @@
   <% publishedPosts = Post.where(id: @posts_approved.drop(5).map(&:id))%>
   <% featuredPostIds = [] %>
   <div class="wrapper_home">
-  <h1 class="section--title"><a href="/categories/student-life">Student Life</a></h1>
+  <h1 class="section--title"><a href="/categories/heforshe" style="color: #F2740A;"><i>#HeForShe</i></a></h1>
   <div class="flex--welcome">
     <div class="flex-1">
       <div class="ctgry_section">
-        <% publishedPosts.where(:category_id => Category.friendly.find("student-life").id).all.order("publish_at desc")[0..2].each do |post| %>
+        <% publishedPosts.where(:category_id => Category.friendly.find("heforshe").id).all.order("publish_at desc")[0..2].each do |post| %>
           <% featuredPostIds << post.id %>
           <div class="ctgry_article">
             <%=link_to(image_tag(post.thumbnail.url(:large2), alt: post.title), post )%>
@@ -48,7 +48,7 @@
           </div>
         <% end %>
       </div>
-      <h1 class="section--title"><a href="/categories/culture">Op-ed</a></h1>
+      <h1 class="section--title"><a href="/categories/opinion">Op-ed</a></h1>
       <div class="ctgry_section">
         <% publishedPosts.where(:category_id => Category.friendly.find("opinion").id).all.order("publish_at desc")[0..2].each do |post| %>
           <% featuredPostIds << post.id %>
