changed color for heforshe

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,7 +34,7 @@
   <% publishedPosts = Post.where(id: @posts_approved.drop(5).map(&:id))%>
   <% featuredPostIds = [] %>
   <div class="wrapper_home">
-  <h1 class="section--title"><a href="/categories/heforshe" style="color: #F2740A;"><i>#HeForShe</i></a></h1>
+  <h1 class="section--title" style="border-color: #EA1976;"><a href="/categories/heforshe" style="color: #EA1976;"><i>#HeForShe</i></a></h1>
   <div class="flex--welcome">
     <div class="flex-1">
       <div class="ctgry_section">
