--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
             <div class="border">
               <nav class="nav_article">
                 <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
-                <a class="link" href="/categories/heforshe" style="color: #F2740A"><i>#HeForShe</i></a>
+                <a class="link" href="/categories/heforshe" style="color: #EA1976"><i>#HeForShe</i></a>
                 <a class="link" href="/categories/student-life">Student Life</a>
                 <a class="link" href="/categories/wellness">Wellness</a>
                 <a class="link" href="/categories/beauty-style">Beauty & Style</a>
