--- a/app/views/layouts/partials/_slide-in-menu.html.erb
+++ b/app/views/layouts/partials/_slide-in-menu.html.erb
@@ -2,7 +2,7 @@
   <div class="toggle-nav toggle-nav-x" onclick="toggleNav();"><i class="fa fa-times"></i></div>
   <h2><a href="/">TTM</a></h2>
   <hr>
-  <a href="/categories/heforshe" style="color: #F2740A"><i>#HeForShe</i></a>
+  <a href="/categories/heforshe" style="color: #EA1976"><i>#HeForShe</i></a>
   <a href="/categories/student-life">Student Life</a>
   <a href="/categories/wellness">Wellness</a>
   <a href="/categories/beauty-style">Beauty & Style</a>
