--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -32,7 +32,8 @@
     <div id="site-wrapper">
       <%= render "layouts/partials/slide-in-menu" %>
       <div id="site-canvas">
-        <div class="bodywrapper">
+        <p class= "banner_stts" style="background-color: #EA1976;">The Teen Magazine is supporting the #HeForShe movement. Learn more <%= link_to("here", "/categories/heforshe", class: "link_white") %></p>
+        <div class="bodywrapper" style="padding-top: 30px;">
           <header id="main_navigation" class="clearfix minimal_banner">
             <div id="banner">
               <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
