--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -33,6 +33,10 @@ iframe {
   min-width: 300px !important;
 }
 
+.submit_btn:hover {
+  cursor: pointer;
+}
+
 .image_fit_scrn {
   display: block;
   max-width: 100%;
