--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -44,13 +44,13 @@
       <!-- Grid column -->
       <div>
         <!-- Links -->
-        <h6 class="font-weight-bold text-uppercase">Get in Touch</h6>
+        <h6 class="font-weight-bold text-uppercase">Keep in Touch</h6>
         <ul class="list-unstyled">
           <li>
             <a href="/contact-us">Contact us</a>
           </li>
           <li>
-            <a>editors@theteenmagazine.com</a>
+            <a href="/subscribe">Subscribe to our Newsletter</a>
           </li>
         </ul>
       </div>
