--- a/app/views/layouts/partials/_slide-in-menu.html.erb
+++ b/app/views/layouts/partials/_slide-in-menu.html.erb
@@ -3,6 +3,7 @@
   <h2><a href="/">TTM</a></h2>
   <hr>
   <a href="/categories/heforshe" style="color: #EA1976"><i>#HeForShe</i></a>
+  <a href="/subscribe">July 2020 Issue</a>
   <a href="/categories/student-life">Student Life</a>
   <a href="/categories/wellness">Wellness</a>
   <a href="/categories/beauty-style">Beauty & Style</a>
@@ -20,7 +21,6 @@
      <%= link_to "Dashboard", user_path(current_user) %>
      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
   <% else %>
-    <a href="/contact-us">Contact</a>
     <a href="/apply">Apply</a>
     <a href="/login">Log in</a>
   <% end %>
