--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -20,11 +20,11 @@
 
 <!--End mc_embed_signup-->
   <%= form_for(:pages, url:"/july2020_RCUzi9NVVYAoXNLSkwtK") do |f| %>
-    <%= f.text_field :email, placeholder: "email@gmail.com", :style => "margin-bottom: 10px;", required: true %>
+    <%= f.text_field :email, placeholder: "Email Address", :style => "margin-bottom: 10px;", required: true %>
     <%= f.check_box :sub, :checked => true %>
     <span>Subscribe to The Teen Magazine newsletter & receive all future monthly issues.</span>
     <br>
     <br>
-    <%= f.submit "View July Issue" %>
+    <%= f.submit "View July Issue", class: "submit_btn" %>
   <% end %>
 </div>
