fixed broken links

--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -4,12 +4,12 @@
     <br>
   <h4><i>A special thanks to this month's magazine issue writers and designers:</i></h4>
   <span>
-    <%= link_to("Malak Yousry - Creative Director", "http://theteenmagazine.com/users/malak-yousry", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Khushi Gupta - Creative Director", "http://theteenmagazine.com/users/khushi-gupta", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Daniela Paris - Visual Designer", "http://theteenmagazine.com/users/daniela-paris", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Bettina Henares - Visual Designer", "http://theteenmagazine.com/users/malak-yousry", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Jane Park - Visual Designer", "http://theteenmagazine.com/users/malak-yousry", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Lishmello - Image Editor", "http://theteenmagazine.com/users/malak-yousry", :target => "_blank", :class => "link_nrml") %>
+    <%= link_to("Malak Yousry - Creative Director", "https://theteenmagazine.com/users/malak-yousry", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Khushi Gupta - Creative Director", "https://theteenmagazine.com/users/khushi-gupta", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Daniela Paris - Visual Designer", "https://theteenmagazine.com/users/daniela-paris", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Bettina Henares - Visual Designer", "https://theteenmagazine.com/users/bettina-henares", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Jane Park - Visual Designer", "https://theteenmagazine.com/users/jane-park", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Lishmello - Image Editor", "https://www.instagram.com/lishmello", :target => "_blank", :class => "link_nrml") %>
   </span>
   <br>
   <br>
