--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
     <div id="site-wrapper">
       <%= render "layouts/partials/slide-in-menu" %>
       <div id="site-canvas">
-        <p class= "banner_stts" style="background-color: #EA1976;">The Teen Magazine is supporting the #HeForShe movement. Learn more <%= link_to("here", "/categories/heforshe", class: "link_white") %></p>
+        <p class= "banner_stts" style="background-color: #FF78CB;">The Teen Magazine's official July 2020 issue is out! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
         <div class="bodywrapper" style="padding-top: 30px;">
           <header id="main_navigation" class="clearfix">
             <div id="banner">
@@ -60,12 +60,11 @@
             <div class="border">
               <nav class="nav_article">
                 <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
-                <a class="link" href="/categories/heforshe" style="color: #EA1976"><i>#HeForShe</i></a>
                 <a class="link" href="/categories/student-life">Student Life</a>
                 <a class="link" href="/categories/wellness">Wellness</a>
                 <a class="link" href="/categories/beauty-style">Beauty & Style</a>
                 <a class="link" href="/categories/culture">Culture</a>
-                <!-- <a class="link" href="/categories/relationships">Relationships</a> -->
+                <a class="link" href="/categories/relationships">Relationships</a>
                 <a class="link" href="/categories/lifestyle">Lifestyle</a>
                 <a class="link" href="/categories/op-ed">Op-Ed</a>
                 <% if user_signed_in? %>
