--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
       <%= render "layouts/partials/slide-in-menu" %>
       <div id="site-canvas">
         <!-- <p class= "banner_stts" style="background-color: #FF78CB;">The Teen Magazine's July 2020 issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p> -->
-        <div class="bodywrapper" style="padding-top: 30px;">
+        <div class="bodywrapper">
           <header id="main_navigation" class="clearfix">
             <div id="banner">
               <i class="fa fa-bars toggle-nav" onclick="toggleNav();"></i>
