show which editor gave a review for pitch/article

--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -47,6 +47,7 @@
         <div class="card-body">
           <%= f.select :status, options_for_select(["Approved", "Rejected"], {prompt: "Select status"}) %>
           <%= f.text_field :notes, placeholder: "(Optional) Editor notes" %>
+          <%= f.hidden_field :editor_id, value: current_user.id %>
         </div>
       </div>
     <% end %>
