--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -9,13 +9,13 @@
   <h3 class="pitch_ttl"><%= @pitch.title %></h3>
   <p class="pitch_usr">Pitched by <%= link_to(@pitch.user.full_name, @pitch.user, class: "pitch_btn") %> under <%= link_to(@pitch.category.name, @pitch.category, class: "pitch_btn") %></p>
   <% if @pitch.status.eql? "Approved" %>
-    <p style="background-color: yellow; display: inline-block;">This pitch was approved! You may claim it to start your draft.</p><br>
+    <p style="background-color: yellow; display: inline-block;">This pitch was approved<% if @pitch.editor_id.present?%> by <%= link_to(@editor.full_name, @editor) %><% end %>! You may claim it to start your draft.</p><br>
   <% elsif @pitch.status.eql? "Rejected" %>
-    <p style="background-color: yellow; display: inline-block;">This pitch was not approved.</p><br>
-    <% if @pitch.notes.present? %>
-      <i>Editor Notes:</i>
-      <%= @pitch.notes %><br>
-    <% end %>
+    <p style="background-color: yellow; display: inline-block;">This pitch was not approved<% if @pitch.editor_id.present?%> by <%= link_to(@editor.full_name, @editor) %><% end %>.</p><br>
+  <% end %>
+  <% if @pitch.notes.present? %>
+    <i>Editor Notes:</i>
+    <%= @pitch.notes %><br>
   <% end %>
   <%= image_tag(@pitch.thumbnail, class: "thumbnail_img") %>
   <%= markdown @pitch.description %>
